--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
 
 body {
-  background: #c5bdbd;
+  background: #929ec0;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -302,4 +302,8 @@ footer {
   background-color: #ccc;
   padding: 20px;
   text-align: center;
+}
+
+.imagen-redonda {
+  border-radius: 50%;
 }
