--- a/estilos.css
+++ b/estilos.css
@@ -179,7 +179,7 @@ header {
 
 .nav-link:hover {
   background-color: #6d0202;
-  color: #3a3939;
+  color: #292727;
 }
 
 .contenedor-grid {
@@ -307,3 +307,57 @@ footer {
 .imagen-redonda {
   border-radius: 50%;
 }
+
+#resultado{
+  background-color: #cddfc6;
+  margin-top: 80px
+}
+
+input[type="button"] {
+  background-color: #eba309; /* Cambia el color de fondo del botón */
+  color: #290f0f; /* Cambia el color del texto del botón */
+  padding: 10px 20px; /* Ajusta el espacio interno del botón */
+  border: none; /* Elimina el borde del botón */
+  border-radius: 5px; /* Agrega esquinas redondeadas al botón */
+  cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+input[type="button"]:hover {
+  background-color: #1bdb09; /* Cambia el color de fondo del botón al pasar el cursor sobre él */
+}
+
+.NavigationBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f2f3f5;
+  padding: 7px;
+}
+
+.sintesis{
+  background-color: #dfe9db;
+  margin-top: 80px
+}
+
+.container1 {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.texto {
+  font-size: 18px;
+  background-color: #73b875;
+  margin-top: 50px;
+  text-align: center;
+}
+
